Client -- Refactor the Vuex and Services

--- a/client/src/assets/css/tailwind.css
+++ b/client/src/assets/css/tailwind.css
@@ -1,23 +1,6 @@
 @tailwind base;
 @tailwind components;
 
-@font-face {
-  font-family: 'Roboto';
-  src: url(../fonts/Roboto-Regular.ttf) format('ttf');
-}
-
-@font-face {
-  font-family: 'RobotoCondensed';
-  src: url(../fonts/RobotoCondensed-Regular.ttf) format('ttf');
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300;400;700&display=swap');
 
 @tailwind utilities;
-
-
-/* @import url(../fonts/Roboto-Regular.ttf);
-@import url(../fonts/RobotoCondensed-Regular.ttf); */
-
-/* @import "../fonts/Roboto-Regular.ttf";
-@import "../fonts/RobotoCondensed-Regular.ttf"; */
-
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed&display=swap'); */
