--- a/client/src/assets/css/tailwind.css
+++ b/client/src/assets/css/tailwind.css
@@ -1,3 +1,89 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.selection::before {
+  content: '';
+  position: absolute;
+  background-color: #3f5359;
+  opacity: 0.5;
+  width: 100%;
+  height: 100%;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 0;
+}
+
+.wrapper {
+  transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+  animation: fadeIn;
+  animation-duration: 0.6s;
+}
+
+.wrapper-close {
+  transition: transform 0.5s ease-in-out;
+  animation: fadeIn 0.5s reverse;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.tips-open {
+  animation: slideIn;
+  animation-duration: 0.4s;
+}
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateX(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.tips-close {
+  transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+  animation: slideOut;
+  animation-duration: 0.5s;
+}
+
+@keyframes slideOut {
+  from {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(-10);
+  }
+}
+
+.svg-view {
+  margin: 0 10px 0 0;
+  width: 30%;
+}
+
+.slide-enter-active,
+.slide-leave-active {
+  opacity: 1;
+  transition: all 0.7s ease-in-out;
+}
+
+.slide-enter,
+.slide-leave-to {
+  opacity: 0;
+  transform: translateY(10px);
+}
